# racoon-ipsec-tools

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS.md  README.md  TEST.md  TRAILER_TEST_A.tmp  TRAILER_TEST_B.tmp  TRAILER_TEST_C.tmp  configure  configure.ac  ltmain.sh  package_version.h.in
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: build-test.yml  guard-tree-purity.yml  openssl-deprecation-canary.yml
debian/: changelog  control  copyright  ipsec-tools.copyright  ipsec-tools.install  ipsec-tools.lintian-overrides  ipsec-tools.postinst  ipsec-tools.setkey.init  ipsec-tools.setkey.service  ipsec-tools.symbols  not-installed  racoon-tool.conf.5  racoon-tool.pl  racoon.README.Debian  racoon.config  racoon.dirs  racoon.docs  racoon.init  racoon.install  racoon.lintian-overrides  racoon.postinst  racoon.postrm  racoon.service  racoon.symbols  racoon.templates  rules  watch
debian/patches/: 0001-extend-setkey.8-manpage-esp-udp-tcp-md5.patch  0024-Fix-isakmp-fragmentation-bug-in-CVE-2016-10396-patch.patch  0025-NetBSD-pass-the-correct-size-for-tbuf.patch  0026-NetBSD-fix-incorrect-authentication-algorithms.patch  0027-NetBSD-Clean-up-setkey.patch  0028-NetBSD-Remove-dead-files-that-have-never-been-built.patch  0029-NetBSD-Use-Cm-instead-of-Li-or-Ar-for-fixed-command-.patch  0030-NetBSD-setkey-enable-to-use-the-getspi-API.patch  0031-NetBSD-setkey-document-getspi-and-update.patch  0032-NetBSD-Remove-superfluous-Li.patch  0033-NetBSD-prefix-errors-with-the-program-name-and-use-s.patch  0034-NetBSD-Keep-track-of-the-filename-to-print-in-error-.patch  0035-NetBSD-Improve-error-output-for-script-and-command-m.patch  0036-NetBSD-Remove-extra-semicolon.patch  0037-Correct-memory-management-and-malicious-includes.patch  0038-NetBSD-Update-release-summary-and-README.patch  0038-Use-automake-YACC-LEX-wrapper.patch  0040-Fix-pointers-to-packed-struct-members.patch  0041-Use-modern-OpenSSL-for-Base64-encoding-decoding.patch  0042-Migrate-to-OpenSSL-1.1.0.patch  0043-Replace-API-functions-deprecated-in-OpenSSL-3.0.patch  0044-Fix-array-against-NULL-comparison-bug.patch  0045-Provide-compatibility-functions-for-OpenSSL-RSA.patch  0046-Better-handle-different-sockaddr-types.patch  0047-Add-further-unit-tests-for-OpenSSL-3.0-migration.patch  CVE-2016-10396.patch  FTBFS2_kfreebsd.patch  Fix-spelling-error-racoon.conf.5.patch  asn1_utf8.patch  automake-options  bug777918-implicit-int.patch  bug785778-null-pointer-deref.patch  bug790244-glibc-bsd-source-obsolete.patch  checkpoint-xauth.patch  config-updates.diff  configure-pass-Wl-with-R.patch  fix-uninitialized-vars.patch  gcc-4.8.diff  gcc7-support.patch  include-stdint.patch  (+11 more)
debian/po/: cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/source/: local-options
docs/admin-guide/: fonts.css  racoon-admin-guide.html
docs/admin-guide/fonts/: OFL.txt
docs/history/: NEWS
docs/rfcs/: 0000-template.md  README.md
docs/suites/: kernelpaws_design.md  kernelpaws_design_v1.md  kernelpaws_prototype.md  kernelpaws_review.md  kernelpaws_session_summary.md  kernelpaws_testing.md  libreswan_xfrm_analysis.md
m4/: .gitignore  acracoon.m4  racoon.m4
packaging/arch/: .SRCINFO  PKGBUILD
packaging/rpm/: ipsec-tools.spec.in
packaging/rpm/suse/: Makefile.am  ipsec-tools.spec.in
scripts/: setup-dev-env.sh
src/: Makefile.am
src/include-glibc/: Makefile.am
src/include-glibc/net/: pfkeyv2.h
src/libipsec/: Makefile.am  ipsec_dump_policy.c  key_debug.c  policy_parse.y  policy_token.c
src/racoon/: Makefile.am  Makefile.in  admin.c  algorithm.c  backupsa.c  cfparse.y  cftoken.l  crypto_openssl.c  crypto_openssl.h  eay_rsa.c  eay_rsa.h  eaytest.c  evt.c  grabmyaddr.c  handler.h  ipsec_doi.c  ipsec_dump_policy.c  ipsec_hexdump.c  isakmp.c  isakmp_agg.c  isakmp_base.c  isakmp_cfg.c  isakmp_frag.c  isakmp_ident.c  isakmp_inf.c  isakmp_quick.c  isakmp_unity.c  isakmp_xauth.c  isakmp_xauth.h  kernelpaws.c  kernelpaws.h  kernelpaws_pfkeyv2.c  kernelpaws_xfrm.c  kmpstat.c  logger.c  nattraversal.c  oakley.c  openssl_compat.c  openssl_compat.h  pfkey.c  (+18 more)
src/racoon/doc/: FAQ
src/setkey/: Makefile.am  extern.h  parse.y  setkey.8  setkey.c  token.c  token.l
test/: Makefile.am  README.md  rsalist_test_stubs.c  test_cipher_shim.c  test_crypto_coverage.c  test_dh_buffer_overflow.c  test_dh_modp_groups.c  test_eay_rsa.c  test_genlist.c  test_logger.c  test_rsa_comprehensive.c  test_sockmisc.c  test_str2val.c  test_vmbuf.c  valgrind.supp
tools/: gen_deprecation_report.py  merge_gcc_json.py
